--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,10 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
 
+
+*= require bootstrap.min
+*= require jquery-ui
+
 *= require STYLE
 
 *= require datepicker
