--- a/app/assets/stylesheets/report/reports.css.scss
+++ b/app/assets/stylesheets/report/reports.css.scss
@@ -2,189 +2,192 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "../STYLE";
+
 // #left part
-$main-height:600px - 70px;
-$list-width:220px;
-.report-menu{
+$main-height: 600px - 70px;
+$list-width: 220px;
+.report-menu {
   @include box-sizing-border;
-  float:left;
-  width:$list-width;
+  float: left;
+  width: $list-width;
   min-height: $main-height;
-  height:calc( 100% - 70px );
-  position:relative;
-  section{
-    background:lighten($nav-dark,4%);
-    @include box-shadow-inset(-3px,0px,8px,rgba(0,0,0,0.1));
-    height:100%;
-    &>.header{
-      width:100%;
-      height:50px;
-      p{
-        text-align:center;
-        color:#fff;
-        font-family:'avenir';
-        padding:14px 0px;
-        font-size:18px;
+  height: calc(100% - 70px);
+  position: relative;
+  section {
+    background: lighten($nav-dark, 4%);
+    @include box-shadow-inset(-3px, 0px, 8px, rgba(0, 0, 0, 0.1));
+    height: 100%;
+    & > .header {
+      width: 100%;
+      height: 50px;
+      p {
+        text-align: center;
+        color: #fff;
+        font-family: 'avenir';
+        padding: 14px 0px;
+        font-size: 18px;
       }
     }
-    &>ul{
-      $li-padding:10px;
-      &>p{
-        color:lighten($nav-dark,25%);
-        font-size:13px;
-        padding-left:$li-padding;
-        margin:5px 0 0px;
+    & > ul {
+      $li-padding: 10px;
+      & > p {
+        color: lighten($nav-dark, 25%);
+        font-size: 13px;
+        padding-left: $li-padding;
+        margin: 5px 0 0px;
       }
-      li{
-        a{
-          $vertical-padding:6px;
-          i{
-            font-size:10px;
-            display:inline-block;
-            &.mark{
-              margin-right:10px;
-              position:relative;
-              top:-1px;
+      li {
+        a {
+          $vertical-padding: 6px;
+          i {
+            font-size: 10px;
+            display: inline-block;
+            &.mark {
+              margin-right: 10px;
+              position: relative;
+              top: -1px;
             }
-            &.indicate{
-              float:right;
-              margin-top:2px;
+            &.indicate {
+              float: right;
+              margin-top: 2px;
               display: none;
             }
           }
-          cursor:pointer;
-          color:rgba(255,255,255,0.8);
-          font-size:12px;
-          display:block;
-          padding:$vertical-padding $li-padding;
-          width:100%;
+          cursor: pointer;
+          color: rgba(255, 255, 255, 0.8);
+          font-size: 12px;
+          display: block;
+          padding: $vertical-padding $li-padding;
+          width: 100%;
           @include box-sizing-border;
-          &:hover{
-            color:#fff;
-            background:lighten($nav-dark,25%);
+          &:hover {
+            color: #fff;
+            background: lighten($nav-dark, 25%);
           }
-          &.active{
-            color:#fff;
-            background:lighten($nav-dark,25%);
-            i{
-              &.indicate{
-                display:inline-block;
+          &.active {
+            color: #fff;
+            background: lighten($nav-dark, 25%);
+            i {
+              &.indicate {
+                display: inline-block;
               }
             }
           }
         }
       }
     }
-    &>a.btn{
-      $width:150px;
-      position:absolute;
-      font-size:13px;
-      width:$width;
-      padding:7px 0px;
-      left:50%;
-      margin-left:- $width / 2 ;
-      &.share{
-        bottom:120px;
+    & > a.btn {
+      $width: 150px;
+      position: absolute;
+      font-size: 13px;
+      width: $width;
+      padding: 7px 0px;
+      left: 50%;
+      margin-left: - $width / 2;
+      &.share {
+        bottom: 120px;
       }
-      &.snap{
-        bottom:80px;
+      &.snap {
+        bottom: 80px;
       }
-      &.subscribe{
-        bottom:24px;
-        color:#fff;
-        $bg_color:lighten($nav-dark,11%);
-        background:$bg_color;
-        background:-moz-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.6) 10%,rgba(221,221,221, 0.2) 55%) $bg_color;
-        background:-webkit-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.6) 10%,rgba(221,221,221, 0.2) 55%) $bg_color;
+      &.subscribe {
+        bottom: 24px;
+        color: #fff;
+        $bg_color: lighten($nav-dark, 11%);
+        background: $bg_color;
+        background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0.6) 10%, rgba(221, 221, 221, 0.2) 55%) $bg_color;
+        background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0.6) 10%, rgba(221, 221, 221, 0.2) 55%) $bg_color;
       }
     }
   }
 }
+
 // #right part
-.report-content{
+.report-content {
   @include box-sizing-border;
-  float:left;
-  height:calc( 100% - 70px );
-  width:calc( 100% - 220px );
+  float: left;
+  height: calc(100% - 70px);
+  width: calc(100% - 220px);
   // >>>>>>>>>>>>>>>>>>>current status
-  .current-status{
-    .header{
-      width:100%;
-      height:100px;
-      border-bottom:1px solid rgba(0,0,0,0.2);
-      $margin-top:8px;
-      &:after{
+  .current-status {
+    .header {
+      width: 100%;
+      height: 100px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+      $margin-top: 8px;
+      &:after {
         @include after-clear;
       }
-      .header-block{
-        float:left;
+      .header-block {
+        float: left;
         @include box-sizing-border;
-        padding:3px 0 0 8px;
-        border-left:1px solid rgba(0,0,0,0.1);
-        width:15%;
-        margin:5px 0;
-        &>label{
-          display:block;
-          font-size:14px;
-          color:rgba(0,0,0,0.4);
+        padding: 3px 0 0 8px;
+        border-left: 1px solid rgba(0, 0, 0, 0.1);
+        width: 15%;
+        margin: 5px 0;
+        & > label {
+          display: block;
+          font-size: 14px;
+          color: rgba(0, 0, 0, 0.4);
         }
-        &>.btn{
-          padding:5px 8px;
-          font-size:13px;
-          width:115px;
-          margin:5px auto;
+        & > .btn {
+          padding: 5px 8px;
+          font-size: 13px;
+          width: 125px;
+          margin: 5px auto;
         }
-        &:first-of-type{
-          width:400px;
-          border-left-width:0px;
-          p{
-            margin:0px;
-            font-size:14px;
+        &:first-of-type {
+          width: 400px;
+          border-left-width: 0px;
+          p {
+            margin: 0px;
+            font-size: 14px;
             display: inline-block;
-            &:first-of-type{
-              font-size:18px;
-              display:block;
+            &:first-of-type {
+              font-size: 18px;
+              display: block;
             }
-            &:nth-of-type(3){
-              color:$golden-text;
+            &:nth-of-type(3) {
+              color: $golden-text;
             }
           }
-          select{
-            width:280px;
-            paddding:5px 6px;
-            margin-top:4px;
+          select {
+            width: 280px;
+            paddding: 5px 6px;
+            margin-top: 4px;
           }
         }
-        &:nth-of-type(4){
-          width:200px;
+        &:nth-of-type(4) {
+          width: 200px;
         }
-        &:last-of-type{
-          width:calc(70% - 600px);
-          height:85px;
-          p{
-            padding:10px 0 0 17px;
-            font-size:29px;
-            color:#333
+        &:last-of-type {
+          width: calc(70% - 600px);
+          height: 85px;
+          p {
+            padding: 10px 0 0 17px;
+            font-size: 29px;
+            color: #333
           }
         }
       }
 
     }
-    .data-container{
-      background-color:#fff;
-      width:100%;
-      overflow-y:auto;
+    .data-container {
+      background-color: #fff;
+      width: 100%;
+      overflow-y: auto;
     }
   }
 }
+
 .pageload-overlay {
   position: fixed;
   width: 100%;
   height: 100%;
   top: 00px;
-  left:0px;
+  left: 0px;
   visibility: hidden;
-  z-index:899;
+  z-index: 899;
 }
 
 .pageload-overlay.show {
@@ -200,6 +203,7 @@ $list-width:220px;
 .pageload-overlay svg path {
   fill: #fff;
 }
+
 .pageload-overlay::after,
 .pageload-overlay::before {
   content: '';
@@ -218,8 +222,8 @@ $list-width:220px;
 }
 
 .pageload-overlay::after {
-//  background: #6cc88a;
-  background:$blue;
+  //  background: #6cc88a;
+  background: $blue;
   -webkit-transform: translateX(-20px);
   transform: translateX(-20px);
   -webkit-animation: moveRight 0.6s linear infinite alternate;
@@ -227,27 +231,36 @@ $list-width:220px;
 }
 
 .pageload-overlay::before {
-//  background: #4fc3f7;
+  //  background: #4fc3f7;
   background: $red;
   -webkit-transform: translateX(20px);
   transform: translateX(20px);
   -webkit-animation: moveLeft 0.6s linear infinite alternate;
   animation: moveLeft 0.6s linear infinite alternate;
 }
+
 @-webkit-keyframes moveRight {
-  to { -webkit-transform: translateX(20px); }
+  to {
+    -webkit-transform: translateX(20px);
+  }
 }
 
 @keyframes moveRight {
-  to { transform: translateX(20px); }
+  to {
+    transform: translateX(20px);
+  }
 }
 
 @-webkit-keyframes moveLeft {
-  to { -webkit-transform: translateX(-20px); }
+  to {
+    -webkit-transform: translateX(-20px);
+  }
 }
 
 @keyframes moveLeft {
-  to { transform: translateX(-20px); }
+  to {
+    transform: translateX(-20px);
+  }
 }
 
 .pageload-loading.pageload-overlay::after,
@@ -257,76 +270,78 @@ $list-width:220px;
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
+
 //set the table background
-div.gridbox.gridbox_dhx_skyblue{
-  .objbox{
-    table{
-      background:#fff;
+div.gridbox.gridbox_dhx_skyblue {
+  .objbox {
+    table {
+      background: #fff;
     }
-    background:rgba(0,0,0,0);
+    background: rgba(0, 0, 0, 0);
     //background:-moz-linear-gradient(#e2efff, #d3e7ff);
     //background:-webkit-linear-gradient(#e2efff, #d3e7ff);
   }
 }
+
 //add to discussion
-.report_center_back_pop{
-  .choose-project-team{
-    $width:540px;
-    $height:410px;
-    margin-top:- $height / 2;
-    margin-left:- $width / 2;
-    width:$width;
-    height:$height;
+.report_center_back_pop {
+  .choose-project-team {
+    $width: 540px;
+    $height: 410px;
+    margin-top: - $height / 2;
+    margin-left: - $width / 2;
+    width: $width;
+    height: $height;
     @include border-radius-same(3px);
-    &>div{
-      padding:8px 6px;
+    & > div {
+      padding: 8px 6px;
     }
-    .basic_info{
-      &:after{
+    .basic_info {
+      &:after {
         @include after-clear;
       }
-      .basic_left{
+      .basic_left {
         @include box-sizing-border;
-        width:50%;
-        float:left;
-        overflow-y:auto;
+        width: 50%;
+        float: left;
+        overflow-y: auto;
       }
-      .basic_right{
+      .basic_right {
         @include box-sizing-border;
-        width:50%;
-        float:left;
-        overflow-y:auto;
-        p{
-          padding-left:0px;
+        width: 50%;
+        float: left;
+        overflow-y: auto;
+        p {
+          padding-left: 0px;
         }
-        textarea{
-          $width:225px;
-          width:$width;
-          max-width:$width;
-          min-width:$width;
+        textarea {
+          $width: 225px;
+          width: $width;
+          max-width: $width;
+          min-width: $width;
         }
       }
     }
-    .choose-by-select{
-      &>p{
-        color:$blue;
+    .choose-by-select {
+      & > p {
+        color: $blue;
       }
     }
-    .choose-by-create{
-      border-top-width:0px;
-      position:relative;
-      &:before{
-        content:"-------------------------------------------------------------------- OR --------------------------------------------------------------------";
-        position:absolute;
-        top:0px;
-        left:0px;
-        right:8px;
-        text-align:center;
-        color:#9d9d9d;
-        font-size:11px;
+    .choose-by-create {
+      border-top-width: 0px;
+      position: relative;
+      &:before {
+        content: "-------------------------------------------------------------------- OR --------------------------------------------------------------------";
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        right: 8px;
+        text-align: center;
+        color: #9d9d9d;
+        font-size: 11px;
       }
-      &>p{
-        color:$blue;
+      & > p {
+        color: $blue;
       }
     }
   }
